# what flags you want to pass to the CXX compiler & linker
AM_CXXFLAGS = -I$(top_srcdir)/src/includes -g -Wall --std=c++14
AM_LDFLAGS =

bin_PROGRAMS = name-generator
name_generator_SOURCES = main.cpp \
						generator.h \
						generator.h \
						generator.cpp \
						utils.h \
						utils.cpp
						